<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/doctor_imageview"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/doctor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_search_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/appointment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_title"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/appointment_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_start_date"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/rate_button"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_shape"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/rate_button"/>
    </LinearLayout>

</LinearLayout>