<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterPatientActivity"
    android:background="@drawable/register_patient">


        <EditText
            android:id="@+id/patient_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_shape"
            android:padding="10dp" />

        <EditText
            android:id="@+id/patient_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_shape"
            android:padding="10dp" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:background="@drawable/button_shape"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/colorPrimary"/>

        <TextView
            android:id="@+id/register_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="-2"
            android:shadowDy="-2"
            android:shadowRadius="1"/>

</LinearLayout>