<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterPatientActivity"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:isScrollContainer="false"
    android:scrollbars="none"
    android:background="@drawable/register_patient"
    android:id="@+id/register_patient_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp">
                        <Button
                            android:id="@+id/patient_image"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:gravity="center"
                            android:background="@drawable/button_shape"
                            android:text="@string/profile_image"
                            android:backgroundTint="@color/colorPrimary"/>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/select_patient_imageview"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:layout_constraintEnd_toEndOf="@+id/patient_image"
                            app:layout_constraintTop_toTopOf="@+id/patient_image"
                            app:layout_constraintStart_toStartOf="@+id/patient_image"
                            app:layout_constraintBottom_toBottomOf="@+id/patient_image" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/patient_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:background="@drawable/edit_text_shape"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/patient_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edit_text_shape"
                    android:padding="10dp" />


                <EditText
                    android:id="@+id/patient_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_shape"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_button"
                    android:background="@drawable/button_shape"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:shadowDx="-2"
                    android:shadowDy="-2"
                    android:shadowRadius="1" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/google_register"
                    android:textSize="15sp"
                    android:textColor="@color/textColor"
                    android:gravity="center"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:shadowDx="-2"
                    android:shadowDy="-2"
                    android:shadowRadius="1"/>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:buttonSize="wide"/>

        </LinearLayout>

</ScrollView>