<?xml version="1.0" encoding="utf-8"?>
<!--used code from project "Google Calendar" from Khushvinders-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:id="@+id/createEventLayout"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="10"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:text="@string/createEventTitle"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/eventTitle"
                    android:layout_width="0dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:lines="1"
                    android:layout_weight="6"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="10"
                android:background="@android:color/white"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:text="@string/createEventDesc"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/eventDes"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="10"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:text="@string/createEventLocation"
                    android:layout_height="wrap_content" />
                <EditText
                    android:maxLines="1"
                    android:lines="1"
                    android:id="@+id/eventLocation"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/startAt"

                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="@string/createEventStart"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="vertical"

                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content">
                    <DatePicker
                        android:id="@+id/startDate"
                        android:layout_width="wrap_content"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner"
                        android:layout_weight="4"

                        android:layout_height="wrap_content" />
                    <TimePicker
                        android:id="@+id/startTime"
                        android:layout_width="wrap_content"
                        android:layout_weight="4"
                        android:timePickerMode="spinner"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/endAt"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="@string/createEventEnd"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="7"
                    android:layout_height="wrap_content">
                    <DatePicker
                        android:id="@+id/endDate"
                        android:layout_width="wrap_content"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner"
                        android:layout_height="wrap_content" />
                    <TimePicker
                        android:id="@+id/endTime"
                        android:timePickerMode="spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="10"
                android:background="@android:color/white"
                android:padding="10dp"
                android:layout_height="wrap_content">

                <Button
                    android:maxLines="1"
                    android:id="@+id/createEvent"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:text="@string/create_event"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_shape"/>

                <Button
                    android:id="@+id/cancelEvent"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:text="@string/cancel"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_shape"/>

            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</LinearLayout>
